--- a/Resources/Public/Error/Exception.css
+++ b/Resources/Public/Error/Exception.css
@@ -80,6 +80,12 @@ pre {
     padding-right: 20px;
 }
 
+.Flow-Debug-Exception-Backtrace-Code {
+    background: #fff;
+    color: #656a71;
+    padding: 5px;
+}
+
 .Flow-Debug-Backtrace {
     padding: 0;
     color: #34363C;
